--- a/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Header.module.css
+++ b/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Header.module.css
@@ -8,7 +8,7 @@
 .header {
   position: fixed;
   width: 100vw;
-  height: 130px;
+  height: 12vh;
   top: 0;
   left: 0;
   background-color: rgba(89, 153, 232, 0.426);
