--- a/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Body.module.css
+++ b/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Body.module.css
@@ -2,6 +2,7 @@
   top: 12vh;
   position: absolute;
   width: 100vw;
+  height: 50vh;
   background-color: #e2e8f0;
   text-align: center;
   scroll-behavior: smooth;
