--- a/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Body.module.css
+++ b/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Body.module.css
@@ -1,6 +1,7 @@
 .body {
-  top: 12vh;
-  position: absolute;
+  top: 12vh; /*comment out when add more components*/
+  position: absolute; /*comment out when add more components*/
+  /* margin-top: 12vh; // open when add more components*/
   width: 100vw;
   height: 50vh;
   background-color: #e2e8f0;
