--- a/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/Homepage.module.css
+++ b/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/Homepage.module.css
@@ -1,4 +1,7 @@
+body {
+  overflow-x: hidden;
+}
 .container {
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
 }
