--- a/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Card.module.css
+++ b/OneDrive/Desktop/level-5 missoin-0/vite-project/src/pages/components/Card.module.css
@@ -1,10 +1,10 @@
 .cards {
-  top: 62vh;
-  position: absolute;
+  top: 62vh; /*comment out when add more components*/
+  position: absolute; /*comment out when add more components*/
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 100vw;
+  width: 100%;
   margin-top: 60px;
   background-color: white;
 }
@@ -49,7 +49,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
   }
   .card {
     width: 67vw;
